# harmony

./: CMakeLists.txt  vcpkg.json
Harmony/: CMakeLists.txt  Harmony.qmlproject  Harmony.qmlproject.qtds  TODO.txt  connectdialog.cpp  connectdialog.h  connectdialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  qds.cmake  resources.qrc
Harmony/App/autogen/: environment.h
Harmony/Harmony/: CMakeLists.txt  Constants.qml  qmldir
Harmony/Harmony/designer/: plugin.metainfo
Harmony/HarmonyContent/: App.qml  CMakeLists.txt  Screen01.ui.qml
